--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,5 @@
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700');
 body {
-   font-family: 'Roboto', Arial, sans-serif;
+   font-family: Arial, sans-serif;
 }
 .paper_title {
   font-style: italic;
